--- a/index.html
+++ b/index.html
@@ -9,11 +9,22 @@
   </head>
   <body>
     <div class="container">
-      <h1>Ping-pong</h1>
+      <div id="top">
 
+      <h1>Ping Pong</h1>
+      </div>
       <form id="main">
+      <img class="pull-right" src="img/icon2.png" alt="paddle">
+        <h2>Let's play!</h2>
+        <h5> Rules:</h5>
+        <p> Ping Pong will count up to your number from 1 with the following exceptions:
+        <ul>
+         <li>1. Numbers divisible by 3 become "Ping"</li>
+         <li>2. Numbers divisible by 5 become "Pong"</li>
+         <li>3. Numbers divisible by 15 become "Ping-Pong"</li>
+        </ul>
         <div class="form-group">
-          <label for="num">Enter a number:</label>
+          <label for="num">Enter a number:</label><br>
           <input id="num" type="text">
         </div>
 
