--- a/index.html
+++ b/index.html
@@ -4,33 +4,30 @@
     <link href="css/bootstrap.css" type="text/css" rel="stylesheet">
     <link href="css/styles.css" type="text/css" rel="stylesheet">
     <script src="js/jquery-3.1.1.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts2.js"></script>
     <title>Ping-Pong</title>
   </head>
   <body>
     <div class="container">
       <div id="top">
-
-      <h1>Ping Pong</h1>
+        <h1>Ping Pong</h1>
       </div>
       <form id="main">
-      <img class="pull-right" src="img/icon2.png" alt="paddle">
+        <img class="pull-right" src="img/icon2.png" alt="paddle">
         <h2>Let's play!</h2>
         <h5> Rules:</h5>
         <p> Ping Pong will count up to your number from 1 with the following exceptions:
         <ul>
-         <li>1. Numbers divisible by 3 become "Ping"</li>
-         <li>2. Numbers divisible by 5 become "Pong"</li>
-         <li>3. Numbers divisible by 15 become "Ping-Pong"</li>
+          <li>1. Numbers divisible by 3 become "Ping"</li>
+          <li>2. Numbers divisible by 5 become "Pong"</li>
+          <li>3. Numbers divisible by 15 become "Ping-Pong"</li>
         </ul>
         <div class="form-group">
           <label for="num">Enter a number:</label><br>
           <input id="num" type="text">
+          <button type="submit" class="btn">Go</button>
         </div>
-
-        <button type="submit" class="btn">Go</button>
       </form>
-
       <div id="result">
         <ul>
         </ul>
