--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="css/bootstrap.css" type="text/css" rel="stylesheet">
     <link href="css/styles.css" type="text/css" rel="stylesheet">
     <script src="js/jquery-3.1.1.js"></script>
-    <script src="js/scripts2.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Ping-Pong</title>
   </head>
   <body>
@@ -26,6 +26,8 @@
           <label for="num">Enter a number:</label><br>
           <input id="num" type="text">
           <button type="submit" class="btn">Go</button>
+          <div id="checker" class="pull-right2">
+          </div>
         </div>
       </form>
       <div id="result">
